// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test completed 1`] = `
"[0mPerformance report for your page. Learn more about [34m]8;;https://calibreapp.com/docs/automation/single-page-tests[34m[4mCalibre's Single Page Tests ↗[24m[39m[34m]8;;[39m[0m

[32m[1m### Test summary[22m[39m

[0m[90m┌─────────────────────[39m[90m┬─────────────────────────────[39m[90m┬─────────────────[39m[90m┬──────────────────[39m[90m┬──────────────────┐[39m[0m
[0m[90m│[39m[31m Tested Page         [39m[90m│[39m[31m Test Status                 [39m[90m│[39m[31m Test Location   [39m[90m│[39m[31m Device Emulation [39m[90m│[39m[31m Connection Speed [39m[90m│[39m[0m
[0m[90m├─────────────────────[39m[90m┼─────────────────────────────[39m[90m┼─────────────────[39m[90m┼──────────────────[39m[90m┼──────────────────┤[39m[0m
[0m[90m│[39m [34m]8;;https://calibreapp.com[34m[4mInspect tested page[24m[39m[34m]8;;[39m [90m│[39m ✅ Completed ([34m]8;;test-url[34m[4mInspect test[24m[39m[34m]8;;[39m) [90m│[39m 💻 Local laptop [90m│[39m Chrome Desktop   [90m│[39m Cable            [90m│[39m[0m
[0m[90m└─────────────────────[39m[90m┴─────────────────────────────[39m[90m┴─────────────────[39m[90m┴──────────────────[39m[90m┴──────────────────┘[39m[0m

[32m[1m### Core Web Vitals[22m[39m

[0m  [1mCore Web Vitals assessment failed[22m. Learn more about [34m]8;;https://calibreapp.com/blog/core-web-vitals[34m[4mCore Web Vitals ↗[24m[39m[34m]8;;[39m[0m

[0m[90m┌──────────────────────────[39m[90m┬─────────────────────────[39m[90m┬─────────────────────┐[39m[0m
[0m[90m│[39m[31m Largest Contentful Paint [39m[90m│[39m[31m Cumulative Layout Shift [39m[90m│[39m[31m Total Blocking Time [39m[90m│[39m[0m
[0m[90m├──────────────────────────[39m[90m┼─────────────────────────[39m[90m┼─────────────────────┤[39m[0m
[0m[90m│[39m 3748 sec (⚠️ To improve) [90m│[39m 16 (✅ Good)            [90m│[39m 2742 sec (❌ Poor)  [90m│[39m[0m
[0m[90m└──────────────────────────[39m[90m┴─────────────────────────[39m[90m┴─────────────────────┘[39m[0m

[32m[1m### Assets transferred[22m[39m

[0m[90m┌─────────────────────────[39m[90m┬────────┐[39m[0m
[0m[90m│[39m[31m Metric                  [39m[90m│[39m[31m Value  [39m[90m│[39m[0m
[0m[90m├─────────────────────────[39m[90m┼────────┤[39m[0m
[0m[90m│[39m Total Js Transferred    [90m│[39m 93 KB  [90m│[39m[0m
[0m[90m├─────────────────────────[39m[90m┼────────┤[39m[0m
[0m[90m│[39m Total Html Transferred  [90m│[39m 27 KB  [90m│[39m[0m
[0m[90m├─────────────────────────[39m[90m┼────────┤[39m[0m
[0m[90m│[39m Total Image Transferred [90m│[39m 16 KB  [90m│[39m[0m
[0m[90m├─────────────────────────[39m[90m┼────────┤[39m[0m
[0m[90m│[39m Total Css Transferred   [90m│[39m 74 KB  [90m│[39m[0m
[0m[90m├─────────────────────────[39m[90m┼────────┤[39m[0m
[0m[90m│[39m Total Font Transferred  [90m│[39m 62 KB  [90m│[39m[0m
[0m[90m├─────────────────────────[39m[90m┼────────┤[39m[0m
[0m[90m│[39m Total Video Transferred [90m│[39m 55 KB  [90m│[39m[0m
[0m[90m├─────────────────────────[39m[90m┼────────┤[39m[0m
[0m[90m│[39m Total Json Transferred  [90m│[39m 71 KB  [90m│[39m[0m
[0m[90m├─────────────────────────[39m[90m┼────────┤[39m[0m
[0m[90m│[39m Total Transferred       [90m│[39m 400 KB [90m│[39m[0m
[0m[90m└─────────────────────────[39m[90m┴────────┘[39m[0m

"
`;

exports[`test errored 1`] = `
"
https://calibreapp.com on Chrome Desktop
🇺🇸  North Virginia, USA

5:09AM 26-Apr-2019

Calibre was unable to load the page. Please make sure the page URL and site authentication settings are correct.

View the full report https://calibreapp.com/tests/b3baaa1/1fe9862
    "
`;

exports[`test incomplete 1`] = `
"[0mTest in progress[0m

"
`;

exports[`test timeout 1`] = `
"
https://calibreapp.com on Chrome Desktop
🇺🇸  North Virginia, USA

5:09AM 26-Apr-2019

The test took too long to complete.

View the full report https://calibreapp.com/tests/b3baaa1/1fe9862"
`;
